--- a/MovieDB/MovieDB/Base.lproj/Main.storyboard
+++ b/MovieDB/MovieDB/Base.lproj/Main.storyboard
@@ -111,14 +111,14 @@
                                 <rect key="frame" x="0.0" y="88" width="414" height="808"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="mainDetails" rowHeight="221" id="fJo-kc-dWj">
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="mainDetails" rowHeight="221" id="fJo-kc-dWj" customClass="DetailsTableViewCell" customModule="MovieDB" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="24.5" width="414" height="221"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="fJo-kc-dWj" id="PYA-1K-aZE">
                                             <rect key="frame" x="0.0" y="0.0" width="414" height="221"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="tSk-hy-PHb">
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="tSk-hy-PHb">
                                                     <rect key="frame" x="20" y="11" width="128" height="190"/>
                                                     <constraints>
                                                         <constraint firstAttribute="width" constant="128" id="3Gl-gX-sgc"/>
@@ -170,23 +170,30 @@
                                                 <constraint firstItem="AJI-3E-vMH" firstAttribute="top" secondItem="jTN-nP-5kb" secondAttribute="bottom" constant="12" id="zNV-u9-bMc"/>
                                             </constraints>
                                         </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="genresCell" destination="jTN-nP-5kb" id="Hjn-MA-asa"/>
+                                            <outlet property="imageCell" destination="tSk-hy-PHb" id="YNq-Ee-GzN"/>
+                                            <outlet property="starCell" destination="tZU-gc-EAq" id="IRZ-eQ-3VR"/>
+                                            <outlet property="starsCell" destination="AJI-3E-vMH" id="p9U-If-bil"/>
+                                            <outlet property="titleCell" destination="43Z-Tu-Uc4" id="aSV-0C-dQ1"/>
+                                        </connections>
                                     </tableViewCell>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="overview" textLabel="F9r-xV-9Ri" detailTextLabel="XOm-iz-eWC" style="IBUITableViewCellStyleSubtitle" id="IiJ-fz-uQa">
-                                        <rect key="frame" x="0.0" y="245.5" width="414" height="44"/>
+                                        <rect key="frame" x="0.0" y="245.5" width="414" height="51"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="IiJ-fz-uQa" id="DCS-fE-4EG">
-                                            <rect key="frame" x="0.0" y="0.0" width="414" height="44"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="414" height="51"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" insetsLayoutMarginsFromSafeArea="NO" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="F9r-xV-9Ri">
-                                                    <rect key="frame" x="20" y="5" width="31" height="17"/>
+                                                    <rect key="frame" x="20" y="6.5" width="31" height="17"/>
                                                     <autoresizingMask key="autoresizingMask"/>
                                                     <fontDescription key="fontDescription" type="boldSystem" pointSize="14"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" insetsLayoutMarginsFromSafeArea="NO" text="Subtitle" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="XOm-iz-eWC">
-                                                    <rect key="frame" x="20" y="22" width="50" height="17"/>
+                                                    <rect key="frame" x="20" y="26" width="50" height="17"/>
                                                     <autoresizingMask key="autoresizingMask"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                     <color key="textColor" white="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -207,9 +214,12 @@
                             <constraint firstItem="s5X-GM-uKZ" firstAttribute="trailing" secondItem="KE9-XY-SP1" secondAttribute="trailing" id="meQ-hJ-A8E"/>
                         </constraints>
                     </view>
-                    <navigationItem key="navigationItem" title="Details" id="jom-26-qW0">
+                    <navigationItem key="navigationItem" title="Details" leftItemsSupplementBackButton="YES" largeTitleDisplayMode="never" id="jom-26-qW0">
                         <barButtonItem key="backBarButtonItem" title="Movies" id="A0K-1G-rpN"/>
                     </navigationItem>
+                    <connections>
+                        <outlet property="tableView" destination="s5X-GM-uKZ" id="QUg-rg-uoj"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="lkN-UJ-S9O" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
